--- a/xim-forward-router/pom.xml
+++ b/xim-forward-router/pom.xml
@@ -12,4 +12,13 @@
     <artifactId>xim-forward-router</artifactId>
 
 
+    <dependencies>
+
+        <dependency>
+            <groupId>com.xuliang.im</groupId>
+            <artifactId>xim-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
